# CustomQtKeyboard

./: CMakeLists.txt  main.cpp  main.qml
mystyle/: CMakeLists.txt  style.qml
mystyle/images/: CMakeLists.txt
